--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Deploy
       uses: crazy-max/ghaction-github-pages@v1
       with:
-        target_branch: gp-pages
+        target_branch: gh-pages
         build_dir: dist
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}    
